base/kubernetes-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-app
  namespace: apps
spec:
  selector:
    app: kubernetes-app
  ports:
    - port: 80
      targetPort: 80
